# insilico-dms-perses

./: .gitignore  README.md  environment.yml  pyproject.toml
scripts/: run_panel.py
scripts/legacy/: original_script.py
src/dms/: analysis.py  io.py  run_one.py
