[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insilico-dms"
version = "0.1.0"
description = "In-silico deep mutational scanning pipeline using Perses and OpenMM"
authors = [
    { name = "Your Name" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "pyyaml",
    "pymbar>=4",
    "openmm>=8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dms = ["*.yaml"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]
